<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="details">Details</string>
    <string name="city">City</string>
    <string name="delete">Delete</string>
    <string name="create_city_activity">Create City</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="add2">Add</string>
    <string name="city_name">City Name:</string>
    <string name="budapest">Budapest</string>
    <string name="save">Save</string>
    <string name="welcome_to_weatherapp">Welcome to WeatherApp!</string>
    <string name="city_added">City Added!</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="hide">Hide</string>
    <string name="itemID">itemID</string>
    <string name="about_app">This app was made by Teague Harvey</string>
    <string name="action_help">Use touch controls to interact with the app!</string>
    <string name="bad">I don\'t recognise this city...</string>
    <string name="c">°c</string>
    <string name="_20">20</string>
    <string name="tvDesc">Partly Cloudy</string>
    <string name="tvTempMax">15°</string>
    <string name="tvTempMin">12°</string>
    <string name="tvHumidity">76%</string>
    <string name="tvWind">12m/s</string>
    <string name="weather_details">Weather Details</string>
</resources>
